# hengine

./: CMakeLists.txt  Makefile  README.md  ToDo.txt  UI.cpp  g  imgui.ini
.cache/: zsh_history
.cache/clangd/index/: UI.cpp.70AE27928EC0BC8B.idx  UI.h.DDB5E60959A0460B.idx  camera.cpp.B0B44736C5D7F1C0.idx  camera.h.3D81E2373D6727CA.idx  cube.cpp.4B7DC6D1DD86EA08.idx  cube.h.D8F55F927FCF965C.idx  cubeObject.cpp.174A3AE135438AF3.idx  cubeObject.h.2C3499808C5703D6.idx  engine.cpp.6EDA740D7CAB0750.idx  engine.h.806AC505779E4B82.idx  gameObject.cpp.A40FAA67611EF701.idx  gameObject.h.794D0D922660E586.idx  glad.c.B624964DA0D690F5.idx  glad.h.BB259801696DCD14.idx  imconfig.h.DE47D0704B870BCC.idx  imgui.cpp.68A5492F104B6F3E.idx  imgui.h.2278845F166F0252.idx  imgui_demo.cpp.E8A4DACECC7D2331.idx  imgui_draw.cpp.CE8A9117107EEF80.idx  imgui_impl_glfw.cpp.8B1B5B5CF71DF310.idx  imgui_impl_glfw.h.7239A4CAC7EB8CAA.idx  imgui_impl_opengl3.cpp.0D9BDA0A62A099D2.idx  imgui_impl_opengl3.h.E27A98DE12E2B8C7.idx  imgui_impl_opengl3_loader.h.D1AF1FF4219B946C.idx  imgui_internal.h.A64E62BA4E8BA042.idx  imgui_tables.cpp.AE7D9E7481DA421C.idx  (+22 more)
include/: UI.h  camera.h  engine.h  gameObject.h  player.h  sceneManager.h  shader.h  skybox.h  textureManager.h
include/gameObjects/: cubeObject.h  planeObject.h
include/glad/: glad.h
shaders/: color_shader.fs  model_shader.fs  shader.fs  shader.vs  skybox_shader.fs
src/: UI.cpp  camera.cpp  engine.cpp  gameObject.cpp  glad.c  main.cpp  player.cpp  shader.cpp  textureManager.cpp
src/gameObjects/: cubeObject.cpp  planeObject.cpp
